--- a/ibl5/themes/IBL/style/style.css
+++ b/ibl5/themes/IBL/style/style.css
@@ -2336,9 +2336,12 @@ img {
 @media (max-width: 640px) {
   .schedule-container {
     margin: 0;
+    padding-left: 8px;
+    padding-right: 8px;
+    overflow-x: hidden;
   }
   .schedule-header {
-    padding: 0 8px;
+    padding: 0;
   }
   .schedule-months {
     border-radius: 0;
@@ -2377,7 +2380,7 @@ img {
     font-size: 1rem;
   }
   .schedule-game__record {
-    font-size: 1rem;
+    display: none;
   }
   .schedule-game__logo {
     width: 14px;
